--- a/test_net/history
+++ b/test_net/history
@@ -7,3 +7,21 @@ txpool.status
 txpool.constructor
 miner.start()
 miner.stop()
+miner.start()
+miner.stop()
+personal.listAccounts
+eth.getBalance(personal.listAccounts[1])
+eth.getBalance(personal.listAccounts[0])
+hlp
+help
+personal.listAccounts
+miner.start()
+miner.stop()
+eth
+personal
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
